<resources>
    <string name="app_name">AceMoneyML</string>
    <string name="str_login">Login</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_new_registration">New Registration</string>
    <string name="str_new_reg">Registration</string>
    <string name="str_name">Name</string>
    <string name="str_phone_number">Phone Number</string>
    <string name="str_register">Register</string>
    <string name="str_home">Home</string>
</resources>