<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="14">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbars"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/toolbar_header_style"
        android:visibility="visible"
        app:title="@string/str_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:background="@drawable/login_bg_shape"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/tvLogin"
            style="@style/tv_heading_style"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/str_login"
            android:visibility="gone" />

        <ImageView
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal|center_vertical"
            android:layout_weight="1"
            android:contentDescription="@string/app_name"
            android:src="@drawable/acemoney" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0dp"
        android:layout_weight="10"
        android:background="@drawable/bg_lower_shape"
        android:orientation="vertical"
        android:padding="@dimen/dimen_20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_weight="1" />


        <EditText
            android:id="@+id/etUsername"
            style="@style/et_basic_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/large_item_margin"
            android:layout_weight="1.5"
            android:ems="10"
            android:hint="@string/str_email"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/et_basic_style"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/large_item_margin"
            android:layout_weight="1.5"
            android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
            android:drawableTint="@color/black"
            android:ems="10"
            android:hint="@string/str_password"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            tools:ignore="UnusedAttribute" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_weight="4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="5">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btLogin"
                style="@style/bt_basic_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:maxHeight="@dimen/dimen_60dp"
                android:text="@string/str_login" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvNewReg"
                style="@style/tv_new_reg_style"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/str_new_registration" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4" />
    </LinearLayout>
</LinearLayout>